<resources>
    <string name="app_name">QuizApp</string>
    <string name="register" />
    <string name="join_our_community" />
    <string name="register2">REGISTER</string>
    <string name="join_our_community2">Join Our Community</string>
    <string name="welcome">Welcome to</string>
    <string name="welcome2">Welcome to Challenge Yourself</string>
    <string name="registerbuttonfirst">Register</string>
    <string name="loginbuttonfirst">Log In</string>
    <string name="login">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="hello_there">Hello There!</string>
    <string name="startgame">Play</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profil">Profile</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
