<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@drawable/background_bun"    tools:context=".MainActivity">    <TextView        android:id="@+id/textView"        android:layout_width="403dp"        android:layout_height="136dp"        android:layout_alignParentLeft="true"        android:layout_alignParentEnd="true"        android:layout_alignParentRight="true"        android:layout_alignParentBottom="true"        android:layout_marginStart="56dp"        android:layout_marginTop="72dp"        android:layout_marginEnd="62dp"        android:fontFamily="@font/bevan"        android:gravity="center"        android:text="@string/welcome2"        android:textColor="@color/colorWhite"        android:textSize="36sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <Button        android:id="@+id/button_to_register"        android:layout_width="228dp"        android:layout_height="85dp"        android:layout_marginStart="88dp"        android:layout_marginTop="69dp"        android:layout_marginEnd="95dp"        android:background="@drawable/custom_button2"        android:fontFamily="@font/arsenal_bold"        android:text="@string/registerbuttonfirst"        android:textColor="@color/colorWhite"        android:textSize="36sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/button_to_login"        tools:ignore="MissingConstraints" />    <Button        android:id="@+id/button_to_login"        android:layout_width="228dp"        android:layout_height="85dp"        android:layout_marginStart="88dp"        android:layout_marginTop="58dp"        android:layout_marginEnd="95dp"        android:background="@drawable/custom_button"        android:fontFamily="@font/arsenal_bold"        android:text="@string/loginbuttonfirst"        android:textColor="@color/colorWhite"        android:textSize="36sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/textView"        tools:ignore="MissingConstraints" />    <Button        android:id="@+id/dummy"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="165dp"        android:layout_marginLeft="165dp"        android:layout_marginEnd="158dp"        android:layout_marginRight="158dp"        android:layout_marginBottom="110dp"        android:text="Button"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent" /></androidx.constraintlayout.widget.ConstraintLayout>