<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bun"
    >

    <EditText
        android:id="@+id/email_login"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:fontFamily="@font/arsenal_bold"
        android:background="@drawable/custom_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="     Email"
        android:inputType="textEmailAddress"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/password_login"
        android:fontFamily="@font/arsenal_bold"
        android:background="@drawable/custom_button2"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="     Password"
        android:inputType="textPassword"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_to_home"
        android:layout_width="151dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="155dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <Button
        android:id="@+id/button_to_register"
        android:layout_width="151dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="154dp"
        android:background="@drawable/custom_button2"
        android:text="@string/register2"
        android:textColor="@color/colorWhite"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dont" />

    <TextView
        android:id="@+id/dont"
        android:layout_width="333dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="121dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="122dp"
        android:fontFamily="@font/arsenal_bold"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/colorWhite"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_to_home" />

    <Button
        android:id="@+id/back_button"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="353dp"
        android:layout_marginRight="353dp"
        android:layout_marginBottom="646dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="122dp"
        android:fontFamily="@font/bevan"
        android:gravity="center"
        android:text="@string/hello_there"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>